--- a/src/main/resources/assets/verdure/lang/en_us.json
+++ b/src/main/resources/assets/verdure/lang/en_us.json
@@ -1,12 +1,13 @@
 {
+  "block.verdure.blue_daisies": "Blue Daisies",
   "block.verdure.brown_mushroom_shelf": "Brown Mushroom Shelf",
   "block.verdure.clover": "Clover",
   "block.verdure.daisies": "Daisies",
-  "block.verdure.dried_mud": "Dried Mud",
   "block.verdure.pebbles": "Pebbles",
-  "block.verdure.quicksand": "Quicksand",
+  "block.verdure.pink_daisies": "Pink Daisies",
   "block.verdure.red_mushroom_shelf": "Red Mushroom Shelf",
   "block.verdure.rock": "Rock",
+  "block.verdure.slate": "Slate",
   "block.verdure.smooth_dirt": "Smooth Dirt",
   "itemGroup.verdure": "Verdure"
 }
