Add wildflowers and their generation

--- a/src/main/resources/assets/verdure/lang/en_us.json
+++ b/src/main/resources/assets/verdure/lang/en_us.json
@@ -5,6 +5,7 @@
   "block.verdure.daisies": "Daisies",
   "block.verdure.pebbles": "Pebbles",
   "block.verdure.pink_daisies": "Pink Daisies",
+  "block.verdure.wildflowers": "Wildflowers",
   "block.verdure.red_mushroom_shelf": "Red Mushroom Shelf",
   "block.verdure.rock": "Rock",
   "block.verdure.slate": "Slate",
