--- a/src/main/resources/assets/verdure/lang/en_us.json
+++ b/src/main/resources/assets/verdure/lang/en_us.json
@@ -10,5 +10,6 @@
   "block.verdure.rock": "Rock",
   "block.verdure.slate": "Slate",
   "block.verdure.smooth_dirt": "Smooth Dirt",
+  "block.verdure.dried_mud": "Dried Mud",
   "itemGroup.verdure": "Verdure"
 }
