--- a/src/main/resources/assets/verdure/lang/en_us.json
+++ b/src/main/resources/assets/verdure/lang/en_us.json
@@ -12,6 +12,8 @@
   "block.verdure.smooth_dirt": "Smooth Dirt",
   "block.verdure.dried_mud": "Dried Mud",
   "block.verdure.hollow_log": "Hollow Log",
+  "block.verdure.hanging_moss": "Hanging Moss",
+  "block.verdure.tall_hanging_moss": "Tall Hanging Moss",
   "container.verdure.hollow_log": "Tree Hollow",
   "itemGroup.verdure": "Verdure"
 }
