--- a/src/main/resources/assets/verdure/lang/en_us.json
+++ b/src/main/resources/assets/verdure/lang/en_us.json
@@ -14,6 +14,7 @@
   "block.verdure.hollow_log": "Hollow Log",
   "block.verdure.hanging_moss": "Hanging Moss",
   "block.verdure.tall_hanging_moss": "Tall Hanging Moss",
+  "block.verdure.humus": "Humus",
   "container.verdure.hollow_log": "Tree Hollow",
   "itemGroup.verdure": "Verdure"
 }
