--- a/src/main/resources/assets/verdure/lang/en_us.json
+++ b/src/main/resources/assets/verdure/lang/en_us.json
@@ -15,6 +15,7 @@
   "block.verdure.hanging_moss": "Hanging Moss",
   "block.verdure.tall_hanging_moss": "Tall Hanging Moss",
   "block.verdure.humus": "Humus",
+  "block.verdure.oak_branch": "Oak Branch",
   "container.verdure.hollow_log": "Tree Hollow",
   "itemGroup.verdure": "Verdure"
 }
