Add birch branch and oak branch texture variants

--- a/src/main/resources/assets/verdure/lang/en_us.json
+++ b/src/main/resources/assets/verdure/lang/en_us.json
@@ -16,6 +16,7 @@
   "block.verdure.tall_hanging_moss": "Tall Hanging Moss",
   "block.verdure.humus": "Humus",
   "block.verdure.oak_branch": "Oak Branch",
+  "block.verdure.birch_branch": "Birch Branch",
   "container.verdure.hollow_log": "Tree Hollow",
   "itemGroup.verdure": "Verdure"
 }
