Hanging roots can be placed on walls

--- a/src/main/resources/assets/verdure/lang/en_us.json
+++ b/src/main/resources/assets/verdure/lang/en_us.json
@@ -17,6 +17,7 @@
   "block.verdure.humus": "Humus",
   "block.verdure.oak_branch": "Oak Branch",
   "block.verdure.birch_branch": "Birch Branch",
+  "block.verdure.wall_roots": "Wall Roots",
   "container.verdure.hollow_log": "Tree Hollow",
   "itemGroup.verdure": "Verdure"
 }
