Add fallen oak leaves

--- a/src/main/resources/assets/verdure/lang/en_us.json
+++ b/src/main/resources/assets/verdure/lang/en_us.json
@@ -18,6 +18,7 @@
   "block.verdure.oak_branch": "Oak Branch",
   "block.verdure.birch_branch": "Birch Branch",
   "block.verdure.wall_roots": "Wall Roots",
+  "block.verdure.fallen_oak_leaves": "Fallen Oak Leaves",
   "container.verdure.hollow_log": "Tree Hollow",
   "itemGroup.verdure": "Verdure"
 }
